FIX: solve some issues in message controller and yaml file
